notizia_gen/tests/compile_fail/request_on_tuple_variant.rs
use notizia_gen::message;

#[message]
enum TestMsg {
    #[request(reply = u32)]
    GetValue(String),
}

fn main() {}
